--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--todo-vova delay-->
-<p>Привет, я wertwertr </p>
+<p>Привет, я Iliya</p>
   Я внес новые изменения!
 </body>
 </html>
